add stars and HII regions

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@
 .idea
 /GaiaXpy/output_spectra.csv
 /GaiaXpy/output_spectra_sampling.csv
+/Data/DR3/Star/A/data.csv
+/Data/DR3/Star/B/data.csv
+/Data/DR3/Star/F/data.csv
+/Data/DR3/Star/G/data.csv
+/Data/DR3/Star/K/data.csv
+/Data/DR3/Star/M/data.csv
+/Data/DR3/Star/O/data.csv
+/Data/DR3/espectros_normalizados_SNGM.csv
+/Data/DR3/Star/main_sequence.csv
+/Data/DR3/Star/A/XP_CONTINUOUS_COMBINED.csv
+/Data/DR3/Star/B/XP_CONTINUOUS_COMBINED.csv
+/Data/DR3/Star/F/XP_CONTINUOUS_COMBINED.csv
+/Data/DR3/Star/G/XP_CONTINUOUS_COMBINED.csv
+/Data/DR3/Star/K/XP_CONTINUOUS_COMBINED.csv
+/Data/DR3/Star/M/XP_CONTINUOUS_COMBINED.csv
+/Data/DR3/Star/O/XP_CONTINUOUS_COMBINED.csv
