test selected NP candidate stars using RNA and RF
T-SNE algorithm

test NP candidate stars

re-execute models and test with candidate stars

re-execute models and test with candidate stars

others stars

improves

refactor

suspected symbiotic stars

dataset 15000

reexecution of algorithms

refactor how to build datasets

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,48 @@
 /Data/DR3/Star/K/XP_CONTINUOUS_COMBINED.csv
 /Data/DR3/Star/M/XP_CONTINUOUS_COMBINED.csv
 /Data/DR3/Star/O/XP_CONTINUOUS_COMBINED.csv
+/new/gaia/*.zip
+/new/symbad/
+/new/normalized/
+/new/calibrated_data/
+/new/datasets/
+/new/candidate_symbiotic_stars_v1/calibrated_data/
+/new/candidate_symbiotic_stars_v1/gaia/
+/new/candidate_symbiotic_stars_v1/normalized/
+/new/candidate_symbiotic_stars_v1/symbad/
+/new/candidate_symbiotic_stars_v1/output/
+/new/candidate_symbiotic_stars_v1/built_dataset/
+/new/candidate_symbiotic_stars_v2/built_dataset/
+/new/candidate_symbiotic_stars_v2/calibrated_data/
+/new/candidate_symbiotic_stars_v2/gaia/
+/new/candidate_symbiotic_stars_v2/normalized/
+/new/candidate_symbiotic_stars_v2/symbad/
+/new/candidate_symbiotic_stars_v2/output/
+/new/plot/
+/new/candidate_symbiotic_stars_v1/plot/
+/new/candidate_symbiotic_stars_v2/plot/
+/new_v2/gaia_calibrated/
+/new_v2/datasets/
+/new_v2/normalized/
+/new_v2/temp/
+/new_v2/symbad/
+/new/other_stars/output/
+/new_v3/calibrated_data/
+/new_v3/gaia/
+/new_v3/symbad/
+/new_v3/temp/
+/new_v3/normalized/
+
+*.svg
+/new/candidate_symbiotic_stars_v1/built_dataset/
+/new_v3/output/
+/new/other_stars/symbad/
+/new/other_stars/normalized/
+/new/other_stars/gaia/
+/new/other_stars/calibrated_data/
+/new/other_stars/built_dataset/
+/new_v3/datasets/
+/new_v3/plot/NP-SVG/
+/new_v3/plot/NP-Candidate/
+/new_v3/gaia-np-candidate/
+/new_v3/ml/RNA/np-candidate.csv
