test Silvana stars and improve tSNE

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,7 @@
 /new_v3/plot/NP-Candidate/
 /new_v3/gaia-np-candidate/
 /new_v3/ml/RNA/np-candidate.csv
+/silvana_stars/allStar-dr17-synspec_rev1.fits
+/silvana_stars/apogee/
+/silvana_stars/gaia/
+/silvana_stars/symbad/
